--- a/Portfolio_website.html
+++ b/Portfolio_website.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
 <html lang = eng>
-	<head>
-	<title> Portofolio Website</title>
-	<meta charset = "UTF-8">
-	</head>
-	<body>
+    <head>
+		<title> Portofolio Website</title>
+		<meta charset = "UTF-8">
+		<link href="style.css" rel="stylesheet"  type="text/css"/>
+    </head>
+    <body>
 		<header>
 	 		<img src="logo.png" alt="My logo" width="90"/>
 			<nav>
 				<ul>
 					<li>
-	                   			<a href="#home"> Home<a/>
+	                   	<a href="#home"> Home<a/>
 					</li>
 					<li>
-	                   			<a href="#about"> About me<a/>
+	                   	<a href="#about"> About me<a/>
 					</li>
 					<li>
-	                  		 	<a href="#contact">Contact Us<a/>
+	                  	<a href="#contact">Contact Us<a/>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<main>
-			<section id="home">
+			<section id="home" class="home">
+				<h1>My Portofolio</h1>
 				<img src="background.gif" alt="Background Image"/>
 			</section>
-			<section id="about">
-				<h1> Bongiwe Sthembile Mvuni</h1>
+			<section id="about" class="about">
+				<h1>About me</h1>
+				<h2>Bongiwe Mvuni</h2>
 				<p>             		 
-        I am a dedicated and flexible professional.My ability to quickly learn and adapt allows me to excel in problem-solving and tackle any challenges presented. 
+					<span>I am a dedicated and flexible professional.</span>
+					<span>My ability to quickly learn and adapt allows me</span>
+					<span>to excel in problem-solving and tackle any challenges presented.</span>
 				</p>
 				<img src="my_pic.jpg" alt="My Image" width="100"/>
 			</section>
+			<section id = "contact" class="contact">
+				<h1>Contact Us</h1>
+				<form>
+					<label for="fname"> First name:
+					</label><br>
+					<input type="text" id="fname" name="fname"><br>
+					<label for="lname"> Last name:
+					</label><br>
+					<input type="text" id="lname" name="lname"><br>
+					<label for="msg"> Message:
+					</label><br>
+					<input type="text" id="msg" name="msg"><br>
+					<input type="submit" value="submit">
+				</form>
+
+			</section>
+
 	    </main>	
 		
 	    <footer>
 		   
-			<section id="contact">
-			                <hr></hr>
-							<p>Pinetown, Durban</p>
+			<section id="footer">
+							<p>Address: Pinetown, Durban</p>
                         	 <a href="www.linkedin.com/in/bongiwe-mvuni">
-                       		 <img src="linkedin.png" alt="Linkedin" width="20">
-                                </a>	
+                       		   <img src="linkedin.png" alt="Linkedin" width="20">
+                             </a>	
 				<img src="phone_logo.png" alt="Phone" width="20">
                                 <p>+27817003220</p>
                             
